[package]
name = "pusher_server"
version = "0.1.0"
authors = ["Sadık Ergüven <sadikerguven@gmail.com>"]
description = "A short description of my package"
repository = "https://github.com/unspokenn/pusher-server-rs"
documentation = "https://docs.rs/pusher-server-rs"
homepage = "https://github.com/unspokenn/pusher-server-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pusher", "websocket", "api", "http", "tcp", "server"]
categories = ["web-programming", "web-programming::http-server", "web-programming::websocket", "network-programming", "api-bindings"]
exclude = ["/ci/*", "/.github/*", "/.cirrus.yml", "/triagebot.toml", "/.idea/*", "/.git/*"]
include = ["src/", "db/src/", "LICENSE-*", "README.md", "COPYRIGHT"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
resolver = "2"
members = ["db"]

[dependencies]
libc = { version = "^0.2", features = ["extra_traits"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
warp = "^0.3"
futures = "^0.3"
sha2 = "^0.10"
hmac = "^0.12"
md-5 = "0.10.1"
hex = "^0.4"
rand = "^0.8"
hashbrown = { version = "^0.12", features = ["serde", "ahash-compile-time-rng", "rayon"] }
regex = "^1.5"
chrono = { version = "^0.4", features = ["serde"] }
log = "^0.4"
env_logger = "^0.9"
